--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,4 @@
-.App{
+/* .App{
     text-align: center;
 }
 .todo-wrapper{
@@ -7,4 +7,7 @@
     min-height: 600px;
     border: 5px solid rgba(73, 204, 249, 1.0);
     padding: 20px;
+} */
+.jumbotron{
+    text-align: center;
 }
