--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,19 @@
-<div class="App">
-  <div class="todo-wrapper">
+<div class="container">
+  <div class="jumbotron">
     <app-header></app-header>
-    <app-todo-input></app-todo-input>
-    <div *ngFor="let todo of todoService.getTodos()">
-      <app-todo-item [todo]="todo"></app-todo-item>
-    </div>
+
   </div>
+  <div class="row">
+    <div class="col-sm-2"></div>
+    <div class="col-sm-8">
+      <app-todo-input></app-todo-input>
+      <div *ngFor="let todo of todoService.getTodos()">
+        <app-todo-item [todo]="todo"></app-todo-item>
+      </div>
+
+    </div>
+    <div class="col-sm-2"></div>
+
+  </div>
+  
 </div>
