--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,6 @@
 *{
     font-family: sans-serif;
 }
+map: {
+    '@ng-bootstrap/ng-bootstrap': 'node_modules/@ng-bootstrap/ng-bootstrap/bundles/ng-bootstrap.js',
+  }
