--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,9 @@
     <div class="col-sm-2"></div>
     <div class="col-sm-8">
       <app-todo-input></app-todo-input>
-      <div *ngFor="let todo of todoService.getTodos()">
+      <div style="margin-bottom:5px;"><label> 
+        Search By :</label><input [(ngModel)]="searchQuery" (input)="filterData(searchQuery)" placeholder="Enter search term here" class="ui-inputtext ui-corner-all ui-widget" ></div>
+      <div *ngFor="let todo of todoData">
         <app-todo-item [todo]="todo"></app-todo-item>
       </div>
 
